# AstraFroge

./: .dockerignore  .env.example  .env.render.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_BE03_PENDING.md  RENDER_DEPLOY_NOTES.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
docs/: BACKEND_V1_005_NO_CODE.md  BACKEND_V1_005_README_SYNC.md  BACKEND_V1_005_STATUS.md  BE_01_COMPLETION_EVIDENCE.md  BE_01_PERSISTENCE_AUDIT.md  BE_02_COMPLETION_EVIDENCE.md  BE_03_AUDIT_BOUNDARY.md  BE_03_COMPLETION_EVIDENCE.md  BE_03_IMPLEMENTATION_SUMMARY.md  BE_03_MERGE_GATE.md  BE_03_README_SYNC.md  BE_03_SCOPE.md  BE_04_COMPLETION_EVIDENCE.md  BE_05_COMPLETION_EVIDENCE.md  BE_06_COMPLETION_EVIDENCE.md  BE_07_COMPLETION_EVIDENCE.md  BE_08_COMPLETION_EVIDENCE.md  BE_09_COMPLETION_EVIDENCE.md  BE_10_COMPLETION_EVIDENCE.md  BE_11_COMPLETION_EVIDENCE.md  BE_12_COMPLETION_EVIDENCE.md  BE_13_COMPLETION_EVIDENCE.md  BE_14_COMPLETION_EVIDENCE.md  BE_15_COMPLETION_EVIDENCE.md  BE_16_COMPLETION_EVIDENCE.md  BE_16_IMPLEMENTATION_IN_PROGRESS.md  BE_16_IMPLEMENTATION_NOTES.md  BE_16_REVIEW_CHECKLIST.md  BE_17_COMPLETION_EVIDENCE.md  BE_18_COMPLETION_EVIDENCE.md  BE_19_COMPLETION_EVIDENCE.md  BE_19_EXECUTION_STATUS_AUDIT.md  BE_19_FOLLOWUP_contract_version_gap.md  BE_20_COMPLETION_EVIDENCE.md  BE_21_COMPLETION_EVIDENCE.md  BE_22_COMPLETION_EVIDENCE.md  BE_23_COMPLETION_EVIDENCE.md  BE_24_COMPLETION_EVIDENCE.md  BE_25_COMPLETION_EVIDENCE.md  BE_27_COMPLETION_EVIDENCE.md  (+5 more)
migrations/: env.py
tests/: __init__.py  conftest.py  test_be15_performance_reporting.py
(+201 files in other folders)
